; ModuleID = '/home/carl/AnghaBench/disque/src/extr_queue.c_receivePauseQueue.c'
source_filename = "/home/carl/AnghaBench/disque/src/extr_queue.c_receivePauseQueue.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@QUEUE_FLAG_PAUSED_IN = common dso_local global i32 0, align 4
@QUEUE_FLAG_PAUSED_OUT = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @receivePauseQueue(i32* %0, i32 %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32* %0, i32** %3, align 8
  store i32 %1, i32* %4, align 4
  %6 = load i32*, i32** %3, align 8
  %7 = call i32* @lookupQueue(i32* %6)
  store i32* %7, i32** %5, align 8
  %8 = load i32*, i32** %5, align 8
  %9 = icmp ne i32* %8, null
  br i1 %9, label %17, label %10

10:                                               ; preds = %2
  %11 = load i32, i32* %4, align 4
  %12 = icmp eq i32 %11, 0
  br i1 %12, label %13, label %14

13:                                               ; preds = %10
  br label %34

14:                                               ; preds = %10
  %15 = load i32*, i32** %3, align 8
  %16 = call i32* @createQueue(i32* %15)
  store i32* %16, i32** %5, align 8
  br label %17

17:                                               ; preds = %14, %2
  %18 = load i32*, i32** %5, align 8
  %19 = load i32, i32* @QUEUE_FLAG_PAUSED_IN, align 4
  %20 = load i32, i32* %4, align 4
  %21 = load i32, i32* @QUEUE_FLAG_PAUSED_IN, align 4
  %22 = and i32 %20, %21
  %23 = icmp ne i32 %22, 0
  %24 = zext i1 %23 to i32
  %25 = call i32 @queueChangePausedState(i32* %18, i32 %19, i32 %24)
  %26 = load i32*, i32** %5, align 8
  %27 = load i32, i32* @QUEUE_FLAG_PAUSED_OUT, align 4
  %28 = load i32, i32* %4, align 4
  %29 = load i32, i32* @QUEUE_FLAG_PAUSED_OUT, align 4
  %30 = and i32 %28, %29
  %31 = icmp ne i32 %30, 0
  %32 = zext i1 %31 to i32
  %33 = call i32 @queueChangePausedState(i32* %26, i32 %27, i32 %32)
  br label %34

34:                                               ; preds = %17, %13
  ret void
}

declare dso_local i32* @lookupQueue(i32*) #1

declare dso_local i32* @createQueue(i32*) #1

declare dso_local i32 @queueChangePausedState(i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
